<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:padding="@dimen/padding_layout"
    tools:context="com.daniel.proyectgh.RepoInfoActivity"
    tools:showIn="@layout/activity_repo_info">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_repo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repo_desc"
            android:textColor="@color/colorPrimaryString"
            android:textSize="14sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">
            <TextView
                android:id="@+id/tv_contributors_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/contributors"
                android:textColor="@color/colorPrimaryString"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_contributors_title"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_first_contrib_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
                <ImageView
                    android:id="@+id/iv_first_contrib"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_image_profile"
                    android:contentDescription="@string/contrib_profile"/>
                <TextView
                    android:id="@+id/tv_first_contrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_below="@+id/tv_contributors_title"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_second_contrib_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
                <ImageView
                    android:id="@+id/iv_second_contrib"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:background="@drawable/rounded_image_profile"
                    android:contentDescription="@string/contrib_profile"/>
                <TextView
                    android:id="@+id/tv_second_contrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_contributors_title"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_third_contrib_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
                <ImageView
                    android:id="@+id/iv_third_contrib"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_image_profile"
                    android:contentDescription="@string/contrib_profile"/>
                <TextView
                    android:id="@+id/tv_third_contrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issues"
            android:textColor="@color/colorPrimaryString"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
